# oqto

./: .dockerignore  .gitignore  AGENTS.md  AI_AGENT_WORKSPACE_RESEARCH_PLAN.md  CHANGELOG.md  CONTEXT.md  INSTRUCTIONS.md  ONBOARDING_IDEAS.md  PRD.md  README.md  ROADMAP.md  SETUP.md  TAURI.md  bug_report_oqto-browser_socket_path.md  dependencies.toml  justfile  lint.tmp  octo-platform.skill  opencode.json  package-lock.json  research.md  setup.sh  trx-manager.html
backend/: .dockerignore  .gitignore  AGENTS.md  BUILD-METRICS.md  Cargo.toml  Cross.toml  Dockerfile  README.md
backend/crates/: README.md
backend/crates/octo/: Cargo.toml
backend/crates/octo-browser/: Cargo.toml  export.md
backend/crates/octo-browser/src/: main.rs
backend/crates/octo-browserd/: package.json  tsconfig.json
backend/crates/octo-browserd/src/: browser.ts  daemon.ts  index.ts  paths.ts  protocol.ts  snapshot.ts  stream-server.ts
backend/crates/octo-files/: Cargo.toml
backend/crates/octo-files/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  routes.rs
backend/crates/octo-protocol/: Cargo.toml
backend/crates/octo-protocol/src/: commands.rs  delegation.rs  events.rs  lib.rs  messages.rs
backend/crates/octo-scaffold/: Cargo.toml
backend/crates/octo-scaffold/src/: generators.rs  main.rs  templates.rs  tiers.rs
backend/crates/octo-setup/: Cargo.toml
backend/crates/octo-setup/src/: main.rs
backend/crates/octo-usermgr/: Cargo.toml
backend/crates/octo-usermgr/fuzz/: Cargo.toml
backend/crates/octo-usermgr/src/: lib.rs  main.rs  validate.rs
backend/crates/octo/examples/: backend.config.schema.json  config.toml  octo.install.toml  sandbox.toml
backend/crates/octo/migrations/: 20241217001_readable_id.sql  20241217002_port_allocation.sql  20241224002_session_agent_ports.sql  20241231001_mmry_port.sql  20260123001_mmry_port_index_runtime_mode.sql  20260128001_user_sldr_port.sql  20260214001_rename_opencode_port.sql
backend/crates/octo/src/: agent_browser.rs  audit.rs  feedback.rs  lib.rs  main.rs  markdown.rs  pi_workspace.rs
backend/crates/octo/tests/: api_tests.rs  sandbox_tests.rs  ts_export_tests.rs
backend/crates/oqto/: AGENTS.md  Cargo.toml  README.md
backend/crates/oqto-browser/: AGENTS.md  Cargo.toml  export.md
backend/crates/oqto-browser/src/: main.rs
backend/crates/oqto-browserd/: AGENTS.md  package.json
backend/crates/oqto-browserd/src/: actions.ts  browser.ts  daemon.ts  defaults.ts  index.ts  paths.ts  snapshot.ts  stream-server.ts
backend/crates/oqto-eavs/: Cargo.toml  README.md
backend/crates/oqto-eavs/src/: lib.rs
backend/crates/oqto-files/: AGENTS.md  Cargo.toml  README.md
backend/crates/oqto-files/src/: config.rs  error.rs  handlers.rs  main.rs  routes.rs
backend/crates/oqto-history/: Cargo.toml  README.md
backend/crates/oqto-history/migrations_oqto_log/: 20260508001_timeline_v1_extensions.sql
backend/crates/oqto-history/src/: legacy_hstry.rs  lib.rs  search.rs  session.rs
backend/crates/oqto-history/tests/: timeline_regressions.rs
backend/crates/oqto-host/: Cargo.toml  README.md
backend/crates/oqto-host/src/: lib.rs  linux_users.rs  runtime.rs
backend/crates/oqto-pi/: Cargo.toml  README.md
backend/crates/oqto-pi/src/: lib.rs  session_parser.rs  types.rs
backend/crates/oqto-protocol/: AGENTS.md  Cargo.toml  README.md
backend/crates/oqto-protocol/src/: commands.rs  delegation.rs  events.rs  lib.rs  messages.rs  parts.rs  projection.rs  runner.rs  timeline.rs
backend/crates/oqto-provisioning/: Cargo.toml
backend/crates/oqto-provisioning/src/: lib.rs
backend/crates/oqto-runner/: AGENTS.md  Cargo.toml  README.md
backend/crates/oqto-runner-protocol/: AGENTS.md  Cargo.toml
backend/crates/oqto-runner-protocol/src/: lib.rs  pi.rs  protocol.rs
backend/crates/oqto-runner/src/: agent_browser.rs  client.rs  lib.rs  main.rs  protocol.rs  (+3 more)
backend/crates/oqto-sandbox/: AGENTS.md  Cargo.toml  README.md
backend/crates/oqto-scaffold/: AGENTS.md  Cargo.toml
backend/crates/oqto-setup/: AGENTS.md  Cargo.toml
backend/crates/oqto-usermgr/: AGENTS.md  Cargo.toml
backend/crates/oqtoctl/: Cargo.toml  README.md
backend/examples/: backend.config.schema.json  config.toml  sandbox.toml  word_lists.toml
backend/migrations/: 20241215001_initial.sql  20241216001_users.sql  20241216002_invite_codes.sql  20241218001_image_digest.sql  20241222001_runtime_mode.sql  20241224001_agents.sql  20241230002_rename_persona_to_agent.sql
backend/src/: lib.rs  main.rs  markdown.rs  session_ui.rs
backend/src/agent/: mod.rs  models.rs  repository.rs  service.rs
backend/src/agent_rpc/: container.rs  local.rs  mod.rs  types.rs
backend/src/api/: error.rs  handlers.rs  main_chat.rs  main_chat_pi.rs  mod.rs  proxy.rs  routes.rs  state.rs  test_harness.rs
backend/src/auth/: claims.rs  config.rs  middleware.rs  mod.rs
backend/src/container/: container.rs  mod.rs
backend/src/ctl/: main.rs
backend/src/eavs/: client.rs  error.rs  mod.rs  types.rs
backend/src/history/: mod.rs
backend/src/invite/: mod.rs  models.rs  repository.rs
backend/src/local/: linux_users.rs  mod.rs  process.rs  runtime.rs  sandbox.rs
backend/src/main_chat/: db.rs  mod.rs  models.rs  pi_service.rs  repository.rs  service.rs
backend/src/persona/: mod.rs
backend/src/pi/: client.rs  mod.rs  runtime.rs  types.rs
backend/src/projects/: mod.rs
backend/src/runner/: client.rs  mod.rs  protocol.rs
backend/src/session/: mod.rs  models.rs  repository.rs  service.rs
backend/src/settings/: mod.rs  schema.rs  service.rs
backend/src/storage/: error.rs  local.rs  mod.rs  traits.rs
backend/src/user/: mod.rs  models.rs  repository.rs  service.rs
backend/src/wordlist/: mod.rs
backend/src/ws/: handler.rs  hub.rs  mod.rs  opencode_adapter.rs  types.rs
backend/tests/: api_tests.rs
backend/tests/common/: mod.rs
fileserver/: .gitignore  Cargo.toml  README.md  test.html
fileserver/examples/: config.toml
fileserver/scripts/: start-with-opencode.sh
fileserver/src/: config.rs  error.rs  handlers.rs  main.rs  routes.rs
tools/agent-android/: pyproject.toml
(+2628 files in other folders)
