[package]
name = "workspace-backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "workspace-backend"
path = "src/main.rs"

[lib]
name = "workspace_backend"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0.95"
thiserror = "2.0"

# CLI
clap = { version = "4.5.49", features = ["derive", "env"] }
clap_complete = "4.5.23"

# Configuration
config = { version = "0.15.18", features = ["toml"] }
dirs = "5.0.1"
shellexpand = "3.1.0"
toml = "0.8.19"

# Logging
env_logger = "0.11.5"
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-tungstenite = "0.26"
tokio-stream = "0.1"

# HTTP client (for EAVS communication and SSE proxying)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Authentication
jsonwebtoken = "9"
base64 = "0.22"
bcrypt = "0.16"
nanoid = "0.4"
rand = { version = "0.9", features = ["std", "std_rng"] }
once_cell = "1.21.3"
urlencoding = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
axum-test = "17"
tempfile = "3"
