[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/oqto-browserd", "crates/octo-browserd"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["Oqto Team"]

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Configuration
config = { version = "0.15", features = ["toml"] }
dirs = "5.0"
shellexpand = "3.1"
toml = "0.8"

# Logging
env_logger = "0.11"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.26"
tokio-util = { version = "0.7", features = ["io"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive", "json", "any"] }

# Utilities
uuid = { version = "1.19", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
regex = "1"
hex = "0.4"

# Markdown rendering with syntax highlighting
comrak = { version = "0.49", default-features = false, features = ["syntect"] }
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# Concurrent data structures
dashmap = "6"

# Authentication
jsonwebtoken = "9"
base64 = "0.22"
bcrypt = "0.17"
nanoid = "0.4"
rand = { version = "0.9", features = ["std", "std_rng"] }
once_cell = "1.21"
urlencoding = "2"
libc = "0.2"
sha2 = "0.10"

# Unix system calls (safe wrappers)
rustix = { version = "1.0", features = ["process"] }
fork = "0.2"

# File operations
mime_guess = "2"
walkdir = "2.5"
notify = "8.2"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }

# Dev dependencies
tempfile = "3"
axum-test = "17"

# gRPC
tonic = "0.14"
prost = "0.14"

# External crates
hstry-core = { git = "https://github.com/byteowlz/hstry", branch = "main" }
trx-core = { git = "https://github.com/byteowlz/trx", branch = "master" }
mmry-core = { path = "../../mmry/crates/mmry-core" }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Faster local deploy profile: significantly reduces compile/link time
# while keeping most release optimizations.
[profile.deploy-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = true

# Workspace-wide clippy linting configuration
# These rules are enforced across all crates to maintain code quality
[workspace.lints.rust]
# Some crates still expose multiple binaries sharing a single lib. The compiler
# flags lib items as dead_code when checking each binary independently, even if
# the item is used by another binary.
# The lib itself compiles warning-free; these are cross-binary false positives.
# Proper fix: decompose into separate crates (tracked in oqto-gxf5).
dead_code = "allow"

[workspace.lints.clippy]
# Style and correctness
collapsible_if = "warn"
collapsible_else_if = "warn"
needless_return = "warn"
needless_borrow = "warn"
clone_on_copy = "warn"
single_char_add_str = "warn"
manual_strip = "warn"
manual_flatten = "warn"
unnecessary_lazy_evaluations = "warn"
unnecessary_map_or = "warn"
io_other_error = "warn"
single_match = "warn"

# Performance
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"

# Pedantic (stricter)
ptr_arg = "warn"
derivable_impls = "warn"

# These are intentionally allowed
too_many_arguments = "allow"
type_complexity = "allow"
module_inception = "allow"

