[package]
name = "fileserver"
version = "0.3.1"
edition = "2021"
description = "Lightweight file server for container workspace access"
license = "MIT"
authors = ["Workspace Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"

# Utilities
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
walkdir = "2"

# Async utilities
futures = "0.3"
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }

# File system notifications
notify = "6"

# Zip support
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-fancy"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
