[project]
name = "agent-android"
version = "0.1.0"
description = "Agent-controlled Android emulator CLI for data extraction and UI automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "uiautomator2>=3.0.0",
    "adbutils>=2.0.0",
    "py-scrcpy-client>=0.4.0",
    "pillow>=10.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
frida = ["frida-tools>=12.0.0"]
network = ["mitmproxy>=10.0.0"]
all = ["agent-android[frida,network]"]

[project.scripts]
agent-android = "agent_android.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_android"]

[tool.ruff]
line-length = 100
target-version = "py310"
