[package]
name = "octo-usermgr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Privileged user management daemon for Octo (socket-activated)"

[[bin]]
name = "octo-usermgr"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
