[package]
name = "octo-usermgr"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Privileged user management daemon for Octo (socket-activated)"

[lib]
name = "octo_usermgr"
path = "src/lib.rs"

[[bin]]
name = "octo-usermgr"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
