[package]
name = "octo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AI Agent Workspace Platform"

[[bin]]
name = "octo"
path = "src/main.rs"

[[bin]]
name = "octoctl"
path = "src/ctl/main.rs"

[[bin]]
name = "octo-runner"
path = "src/bin/octo-runner.rs"

[[bin]]
name = "octo-sandbox"
path = "src/bin/octo-sandbox.rs"

[[bin]]
name = "pi-bridge"
path = "src/bin/pi-bridge.rs"

[lib]
name = "octo"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true

# Configuration
config.workspace = true
dirs.workspace = true
shellexpand.workspace = true
toml.workspace = true

# Logging
env_logger.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Async runtime
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true

# Web framework
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

# Database
sqlx.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

# Markdown rendering
comrak.workspace = true
syntect.workspace = true

# HTTP client
reqwest.workspace = true
reqwest-eventsource.workspace = true

# Concurrent data structures
dashmap.workspace = true

# File server (for Main Chat file access)
octo-files = { path = "../octo-files" }

# Authentication
jsonwebtoken.workspace = true
base64.workspace = true
bcrypt.workspace = true
nanoid.workspace = true
rand.workspace = true
once_cell.workspace = true
urlencoding.workspace = true
libc.workspace = true

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
axum-test.workspace = true
tempfile.workspace = true
