[package]
name = "oqto-browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for communicating with agent-browser daemon"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true

[lints]
workspace = true
