[package]
name = "oqto-eavs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "EAVS client and Pi model generation helpers for Oqto"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
