[package]
name = "oqto-history"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Oqto history and oqto-log storage boundaries"

[dependencies]
anyhow.workspace = true
hex.workspace = true
sha2.workspace = true

[lints]
workspace = true
