[package]
name = "oqto-history"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Oqto history and oqto-log storage boundaries"

[dependencies]
anyhow.workspace = true
hex.workspace = true
once_cell.workspace = true
oqto-pi = { path = "../oqto-pi" }
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true

[lints]
workspace = true
