[package]
name = "oqto-history"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Oqto history and oqto-log storage boundaries"

[dependencies]
anyhow.workspace = true
hex.workspace = true
once_cell.workspace = true
oqto-pi = { path = "../oqto-pi" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
chrono.workspace = true
hstry-core.workspace = true
hyper-util.workspace = true
sqlx.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

[lints]
workspace = true
