[package]
name = "oqto-pi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pi wire protocol types and session file helpers for Oqto"

[dependencies]
log.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
