[package]
name = "oqto-protocol"
description = "Canonical protocol types for Oqto agent communication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hstry-core = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ts-rs = { version = "10", features = ["serde-compat", "chrono-impl", "serde-json-impl"] }

[lints]
workspace = true
