[package]
name = "oqto-runner-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared runner RPC protocol and Pi wire types"

[lib]
name = "oqto_runner_protocol"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
once_cell.workspace = true
base64.workspace = true

oqto-protocol = { path = "../oqto-protocol" }

[lints]
workspace = true
