[package]
name = "oqto-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dedicated runner daemon crate"

[[bin]]
name = "oqto-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

oqto = { path = "../oqto" }
oqto-history = { path = "../oqto-history" }
serde_json.workspace = true
oqto-protocol = { path = "../oqto-protocol" }
oqto-pi = { path = "../oqto-pi" }
oqto-sandbox = { path = "../oqto-sandbox" }
hstry-core.workspace = true

[lints]
workspace = true
