[package]
name = "oqto-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dedicated runner daemon crate"

[[bin]]
name = "oqto-runner"
path = "src/main.rs"

[features]
default = []
integration-tests = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
env_logger.workspace = true
libc.workspace = true
log.workspace = true
once_cell.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
trx-core.workspace = true
uuid.workspace = true

oqto-history = { path = "../oqto-history" }
serde_json.workspace = true
sqlx.workspace = true
oqto-protocol = { path = "../oqto-protocol" }
oqto-pi = { path = "../oqto-pi" }
oqto-sandbox = { path = "../oqto-sandbox" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
