[package]
name = "oqto-scaffold"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Project scaffolding tool for Oqto workspaces"

[[bin]]
name = "oqto-scaffold"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true

# Configuration
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# File operations
walkdir.workspace = true

# Path handling
shellexpand = "3"
dirs-next = "2"

[lints]
workspace = true
