[package]
name = "oqto-setup"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
oqto-provisioning = { path = "../oqto-provisioning" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
shellexpand.workspace = true
dirs.workspace = true
