[package]
name = "oqto-usermgr"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Privileged user management daemon for Oqto (socket-activated)"

[lib]
name = "oqto_usermgr"
path = "src/lib.rs"

[[bin]]
name = "oqto-usermgr"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
