[package]
name = "oqtoctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Control CLI for Oqto server"

[[bin]]
name = "oqtoctl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bcrypt.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
hyperlocal.workspace = true
libc.workspace = true
nanoid.workspace = true
oqto-eavs = { path = "../oqto-eavs" }
oqto-provisioning = { path = "../oqto-provisioning" }
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
urlencoding.workspace = true

[lints]
workspace = true
