[package]
name = "oqto-usermgr-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

# Import only the validation module via lib.rs
[dependencies.oqto-usermgr]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_validate_username"
path = "fuzz_targets/validate_username.rs"
doc = false

[[bin]]
name = "fuzz_validate_path"
path = "fuzz_targets/validate_path.rs"
doc = false

[[bin]]
name = "fuzz_validate_gecos"
path = "fuzz_targets/validate_gecos.rs"
doc = false

[[bin]]
name = "fuzz_validate_all"
path = "fuzz_targets/validate_all.rs"
doc = false

[[bin]]
name = "fuzz_dispatch_json"
path = "fuzz_targets/dispatch_json.rs"
doc = false
